--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "firebase": "^8.7.1",
     "firebaseui": "^4.8.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.4",
     "vue-multiselect": "^2.1.6",
+    "vue-numeric": "^2.4.3",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.2",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.0.0"
   },
