--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-numeric": "^2.4.3",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vue2-editor": "^2.10.2",
     "vuejs-paginate": "^2.1.0",
     "vuex": "^3.6.2",
